tree-sitter-duck/grammar.js
    source_file: $ => $.document,
    module_header: $ => seq("module", field("parameters", $.parameter_list), "where"),
    _statement: $ => choice($.effect_binding_statement, $.resume_dup_statement, $.prefix_signature_statement, $.prefix_fact_statement, $.prefix_unsafe_proof_statement, $.binding_statement, $.type_pattern_statement, $.return_statement, $.for_statement, $.break_statement, $.continue_statement, $.index_assignment, $.assignment, $.expression_statement),
    binding_statement: $ => seq(repeat(field("attribute", $.attribute_group)), choice(seq(field("kind", "let"), optional(field("recursive", "rec"))), seq(field("kind", "const"), optional(field("open", "open")))), optional(field("linear", "!")), field("name", $._binding_pattern), optional(seq(":", field("type", $.type_reference))), "=", field("value", $._expression), repeat(seq("and", field("mutual_name", $.identifier), optional(seq(":", field("mutual_type", $.type_reference))), "=", field("mutual_value", $._expression))), optional(seq("else", field("alternative", $.block))), ";"),
    unit_pattern: $ => seq("(", ")"),
    type_declaration_statement: $ => seq(repeat(field("attribute", $.attribute_group)), "type", field("name", $.identifier), repeat(field("parameter", $.identifier)), "=", field("definition", choice($.type_sum, $.type_product, $.struct_type, $.newtype_type, $.packed_type, $.type_reference))),
    newtype_type: $ => seq("newtype", field("representation", $.type_reference)),
    packed_type: $ => seq("packed", choice($.type_product, $.struct_type)),
    duck_declaration_statement: $ => seq(repeat(field("attribute", $.attribute_group)), "duck", field("name", $.identifier), repeat1(field("role", $.identifier)), field("members", $.duck_member_block)),
    duck_member_block: $ => seq("{", repeat1(seq(choice($.duck_type_member, $.duck_member), optional(","))), "}"),
    duck_type_member: $ => seq("type", field("name", $.identifier), optional(seq("=", field("default", $.type_reference)))),
    duck_member: $ => seq(".", field("name", choice($.identifier, "end")), "=", field("type", $.type_reference)),
    extension_declaration_statement: $ => seq(repeat(field("attribute", $.attribute_group)), "extend", field("type", $.identifier), repeat(field("parameter", $.identifier)), field("members", $.extension_member_block)),
    extension_member_block: $ => seq("{", optional(seq(choice($.extension_type_member, $.shape_field), repeat(seq(choice(",", ";"), choice($.extension_type_member, $.shape_field))), optional(choice(",", ";")))), "}"),
    extension_type_member: $ => seq("type", field("name", $.identifier), "=", field("type", $.type_reference)),
    fixity_declaration_statement: $ => seq(repeat(field("attribute", $.attribute_group)), field("fixity", choice("infixl", "infixr", "infix", "prefix")), field("precedence", $.number), field("operator", $.operator_symbol), "=", field("target", $.fixity_target)),
    prefix_signature_statement: $ => seq("type", field("name", $.lowercase_identifier), "=", field("signature", $.prefix_signature_type), field("clauses", repeat($.prefix_contract_clause))),
    prefix_signature_type: $ => choice(seq("forall", repeat1(field("parameter", $.prefix_signature_binder)), ".", field("body", $.prefix_signature_type)), $.prefix_signature_function_type),
    prefix_signature_function_type: $ => seq(field("parameters", $.prefix_signature_parameter_list), "->", field("result", $.prefix_signature_result)),
    prefix_signature_parameter_list: $ => seq("(", optional(seq(seq($.prefix_signature_parameter, repeat(seq(",", $.prefix_signature_parameter))), optional(","))), ")"),
    prefix_signature_parameter: $ => seq(field("name", $.identifier), ":", field("type", $.prefix_signature_value_type)),
    prefix_signature_result: $ => prec(10, choice(seq("(", field("name", "result"), ":", field("type", $.prefix_signature_value_type), ")"), field("type", $.prefix_signature_value_type))),
    prefix_signature_value_type: $ => choice($.prefix_proof_type, $.prefix_refinement_type, $.type_reference),
    prefix_refinement_type: $ => seq("{", field("name", $.lowercase_identifier), ":", field("value", $.type_reference), "|", field("proposition", $.prefix_proposition), "}"),
    prefix_proposition: $ => choice($.prefix_quantified_proposition, $.prefix_implication_proposition),
    prefix_implication_proposition: $ => seq(field("premise", $.prefix_disjunction_proposition), optional(seq($.prefix_implies_keyword, field("conclusion", $.prefix_implication_proposition)))),
    prefix_disjunction_proposition: $ => seq(field("first", $.prefix_conjunction_proposition), repeat(seq($.prefix_or_keyword, field("rest", $.prefix_conjunction_proposition)))),
    prefix_conjunction_proposition: $ => seq(field("first", $.prefix_negation_proposition), repeat(seq($.prefix_and_keyword, field("rest", $.prefix_negation_proposition)))),
    prefix_negation_proposition: $ => choice(seq($.prefix_not_keyword, field("proposition", $.prefix_negation_proposition)), $.prefix_atomic_proposition),
    prefix_atomic_proposition: $ => choice("True", "False", seq("(", field("proposition", $.prefix_proposition), ")"), seq(field("left", $.prefix_proposition_term), field("operator", choice("=", "!=", "<", "<=")), field("right", $.prefix_proposition_term)), seq(field("value", $.prefix_proposition_term), field("operator", "is"), field("type", $._prefix_membership_type)), $.prefix_proposition_term),
    _prefix_membership_type: $ => choice($.constructor_membership_type, $.type_reference),
    prefix_proposition_term: $ => choice($.prefix_proposition_binary_term, $.prefix_proposition_unary_term, $.prefix_proposition_postfix_term),
    prefix_proposition_postfix_term: $ => choice($.prefix_proposition_call_term, $.prefix_proposition_field_term, $.prefix_proposition_index_term, $.prefix_proposition_parenthesized_term, $.number, $.string, $.character, $.boolean, $.atom_expression, $.import_meta_expression, $.intrinsic_identifier, $.identifier, $._aggregate_constructor_identifier, $._effect_identifier_alias, $.linear_reference),
    fixity_target: $ => choice($._intrinsic_fixity_target, $._qualified_fixity_target, $.identifier, $.intrinsic_identifier),
    qualified_identifier: $ => prec.left(1, seq($.identifier, ".", $.identifier, repeat(seq(".", $.identifier)))),
    type_sum: $ => prec(1, seq(optional("|"), $.type_case, repeat(seq("|", $.type_case)))),
    type_case: $ => seq("#", field("name", $.constructor_identifier), optional(field("payload", $._type_intersection_reference))),
    type_product: $ => $.positional_type_product,
    named_type_field: $ => seq(".", field("name", choice($.identifier, "end")), "=", field("type", $.type_reference)),
    positional_type_product: $ => choice(seq("(", seq(seq($.type_reference, ",", seq($.type_reference, repeat(seq(",", $.type_reference)))), optional(",")), ")"), seq("(", field("element", $.type_reference), ";", field("length", choice($._expression, $.wildcard)), ")"), seq("[", optional(seq(seq($.type_reference, repeat(seq(",", $.type_reference))), optional(","))), "]")),
    return_statement: $ => seq("return", choice(seq(field("value", $._expression), ";"), ";")),
    module_return_statement: $ => seq("return", field("exports", $.shape_value), ";"),
    expression_statement: $ => $._expression,
    _expression: $ => choice($.try_with_expression, $.loop_expression, $.arrow_function, $.recursive_function, $.recursive_call_expression, $.if_expression, $.case_function_expression, $.case_expression, $.binary_expression, $.is_expression, $.as_expression, $.unary_expression, $.application_expression, $.postfix_expression, $.effect_handler_expression),
    arrow_function: $ => choice($._shape_arrow, $._effect_arrow, $._value_arrow),
    parameter_list: $ => seq("(", optional(seq(seq($.parameter, repeat(seq(",", $.parameter))), optional(","))), ")"),
    bracket_parameter_list: $ => seq("[", optional(seq(seq($.parameter, repeat(seq(",", $.parameter))), optional(","))), "]"),
    parameter: $ => seq(optional(choice(seq("const", optional("...")), "!")), field("name", choice($.identifier, $._fixity_identifier_alias, $.wildcard)), optional(seq(":", field("type", $.type_reference)))),
    if_expression: $ => prec.right(seq("if", choice(seq("let", field("pattern", $._match_pattern), "=", field("value", $.condition_expression)), seq("(", seq("let", field("pattern", $._match_pattern), "=", field("value", $.condition_expression)), ")"), field("condition", $.condition_expression)), "then", field("consequence", $.conditional_branch), repeat($.else_if_clause), optional($.else_clause), "end")),
    else_if_clause: $ => seq("else", choice(seq("let", field("pattern", $._match_pattern), "=", field("value", $._expression)), seq("(", seq("let", field("pattern", $._match_pattern), "=", field("value", $._expression)), ")"), field("condition", $._expression)), "then", field("consequence", $.conditional_branch)),
    else_clause: $ => prec(1, seq("else", field("alternative", $.conditional_branch))),
    conditional_branch: $ => repeat1(seq($._statement, optional(";"))),
    union_pattern: $ => seq("#", field("case", $.constructor_identifier), optional(choice(seq($._application_space, field("value", choice($.identifier, $.wildcard))), seq($._application_space, field("value", choice($.unit_pattern, $.union_pattern, $.array_pattern, $.positional_product_pattern))), field("value", choice($.unit_pattern, $.union_pattern, $.array_pattern, $.positional_product_pattern))))),
    condition_expression: $ => choice($.condition_binary_expression, $.condition_is_expression, $.condition_unary_expression, $.condition_application_expression, $.condition_postfix_expression, $.union_case),
    condition_postfix_expression: $ => choice($.condition_call_expression, $.condition_field_expression, $.condition_index_expression, $.condition_parenthesized_expression, $.number, $.string, $.character, $.boolean, $.atom_expression, $.import_meta_expression, $.intrinsic_identifier, $.identifier, $._aggregate_constructor_identifier, $._effect_identifier_alias, $.linear_reference),
    condition_binary_expression: $ => prec.left(6, seq(field("left", $.condition_expression), field("operator", $.operator_symbol), field("right", $.condition_expression))),
    binary_expression: $ => prec.left(6, seq(field("left", $._expression), field("operator", $.operator_symbol), field("right", $._expression))),
    unary_expression: $ => prec.right(8, seq(field("operator", choice("!", "&", "freeze", "comptime", "perform", $.operator_symbol)), field("operand", $._expression))),
    _match_pattern: $ => choice($.alternative_pattern, $._single_match_pattern),
    _binding_pattern: $ => choice($._binding_alternative_pattern, $._single_binding_pattern),
    application_expression: $ => prec.left(9, seq(field("function", choice($.application_expression, $.postfix_expression)), $._application_space, field("argument", $.postfix_expression))),
    postfix_expression: $ => choice($.call_expression, $.field_expression, $.index_expression, $._primary_expression),
    call_expression: $ => prec.left(10, seq(field("function", $.postfix_expression), field("argument", $.parenthesized_or_product))),
    field_expression: $ => prec.left(10, choice(seq(field("object", $.postfix_expression), ".", field("field", choice($.identifier, "end"))), seq(field("object", $._effect_identifier_alias), ".", field("field", choice($.identifier, "end"))))),
    index_expression: $ => prec.left(10, seq(field("object", $.postfix_expression), field("open", token.immediate(prec(1, "["))), optional($._index_contents), "]")),
    _primary_expression: $ => choice($.prefix_by_proof_expression, $.number, $.string, $.character, $.template_literal, $.boolean, $.identifier, $._fixity_identifier_alias, $.wildcard, $._aggregate_constructor_identifier, $._effect_identifier_alias, $.intrinsic_identifier, $.atom_expression, $.import_meta_expression, $.import_expression, $.include_expression, $.named_product, $.positional_product, $.union_case, $.linear_reference, $.unit_pattern, $.array_expression, $.array_repeat_expression, $.shape_value, $.scratch_expression, $.block, $.parenthesized_expression),
    atom_expression: $ => seq("#", field("name", $._row_identifier_alias)),
    import_meta_expression: $ => seq("import", ".", "meta"),
    import_expression: $ => seq("import", field("path", $.string)),
    struct_type: $ => seq("struct", field("fields", $.type_field_block)),
    positional_product: $ => seq("(", choice(seq(seq($._expression, ",", seq($._expression, repeat(seq(",", $._expression)))), optional(",")), seq($._expression, ",")), ")"),
    parenthesized_or_product: $ => choice($.unit_pattern, $.named_product, $.positional_product, $.parenthesized_expression),
    array_expression: $ => seq("[", optional(choice(seq(seq($._expression, repeat(seq(",", $._expression))), optional(",")), $._array_spread_with_tail, seq(optional(seq(seq($._expression, repeat(seq(",", $._expression))), ",")), $.array_spread))), "]"),
    array_spread: $ => seq($._ellipsis_token, field("value", $._expression)),
    _index_contents: $ => choice(seq(seq($._expression, repeat(seq(",", $._expression))), optional(",")), $._array_spread_with_tail, seq(optional(seq(seq($._expression, repeat(seq(",", $._expression))), ",")), $.array_spread), seq($._expression, ";", $._expression)),
    named_shape_pattern: $ => prec(1, seq("{", optional(seq(seq($.named_shape_pattern_field, repeat(seq(",", $.named_shape_pattern_field))), optional(","))), "}")),
    named_shape_pattern_field: $ => seq(".", field("name", $.identifier), optional(choice(seq("=", field("pattern", $._match_pattern)), seq(":", field("type", $.type_reference))))),
    shape_value: $ => prec(2, field("fields", $.shape_field_block)),
    shape_field_block: $ => seq("{", repeat(seq(choice($.shape_field, $.shorthand_field), optional(","))), "}"),
    shape_field: $ => seq(".", field("name", choice($.identifier, "end")), "=", field("value", choice($.shape_nullary_union_case, $._expression))),
    shorthand_field: $ => seq(".", field("name", choice($.identifier, "end"))),
    type_field_block: $ => seq("{", repeat(seq(choice($.type_field, $.named_type_field), optional(","))), "}"),
    block: $ => seq("do", repeat(seq($._statement, optional(";"))), "end"),
    parenthesized_expression: $ => seq("(", $._expression, ")"),
    type_reference: $ => $._type_expression,
    _type_expression: $ => choice($.forall_type, $.function_type, $.type_union),
    function_type: $ => prec.right(1, seq(field("parameter", $.type_union), "->", optional(field("effects", $.latent_effect_row)), field("result", $._type_expression))),
    type_union: $ => prec.left(2, choice($.type_intersection, seq(field("left", $.type_union), ":|", field("right", $.type_intersection)))),
    type_intersection: $ => prec.left(3, choice($.type_difference, seq(field("left", $.type_intersection), ":&", field("right", $.type_difference)))),
    type_difference: $ => prec.left(4, choice($._type_application, seq(field("left", $.type_difference), ":-", field("right", $._type_application)))),
    _type_application: $ => choice($.type_application, $._type_prefix),
    array_type: $ => seq("[", field("element", $._type_expression), ";", field("length", choice($._expression, $.wildcard)), "]"),
    wildcard: $ => "_",
    _aggregate_constructor_identifier: $ => $._struct_identifier_alias,
    attribute_group: $ => seq("@", "[", seq($._expression, repeat(seq(",", $._expression))), optional(","), "]"),
    boolean: $ => choice("true", "false"),
    _intrinsic_fixity_target: $ => prec(2, seq($.intrinsic_identifier, ".", $.identifier, repeat(seq(".", $.identifier)))),
    _qualified_fixity_target: $ => prec(1, $.qualified_identifier),
    _type_intersection_reference: $ => alias($.type_intersection, $.type_reference),
    _shape_arrow: $ => prec(100, $._shape_arrow_expression),
    _effect_arrow: $ => prec(100, $._effect_arrow_expression),
