tree-sitter-duck/test/corpus/ducklang.txt
==================
Aggregate constructors and canonical products
==================

const { .struct } = import "duck:prelude" ();

type Point = struct {
  .x = I32,
  .y = I32,
}

type MaybeI32 = | #Some I32 | #None

type Pixels = [Rgb; 640 * 480]
let point: Point = [20, 22];
let moved = point <& { .x = 21 };
let restored = { .x = 20 } &> moved;
let { .x = x } = moved;

---

(source_file
  (binding_statement
    (named_shape_pattern
      (named_shape_pattern_field
        (identifier)))
    (application_expression
      (postfix_expression
        (import_expression
          (string)))
      (postfix_expression
        (unit_pattern))))
  (type_declaration_statement
    (identifier)
    (struct_type
      (type_field_block
        (named_type_field
          (identifier)
          (type_reference
            (type_union
              (type_intersection
                (type_difference
                  (identifier))))))
        (named_type_field
          (identifier)
          (type_reference
            (type_union
              (type_intersection
                (type_difference
                  (identifier)))))))))
  (type_declaration_statement
    (identifier)
    (type_sum
      (type_case
        (constructor_identifier)
        (type_reference
          (type_difference
            (identifier))))
      (type_case
        (constructor_identifier))))
  (type_declaration_statement
    (identifier)
    (type_reference
      (type_union
        (type_intersection
          (type_difference
            (array_type
              (type_union
                (type_intersection
                  (type_difference
                    (identifier))))
              (binary_expression
                (postfix_expression
                  (number))
                (operator_symbol)
                (postfix_expression
                  (number)))))))))
  (binding_statement
    (identifier)
    (type_reference
      (type_union
        (type_intersection
          (type_difference
            (identifier)))))
    (postfix_expression
      (array_expression
        (postfix_expression
          (number))
        (postfix_expression
          (number)))))
  (binding_statement
    (identifier)
    (binary_expression
      (postfix_expression
        (identifier))
      (operator_symbol)
      (postfix_expression
        (shape_value
          (shape_field_block
            (shape_field
              (identifier)
              (postfix_expression
                (number))))))))
  (binding_statement
    (identifier)
    (binary_expression
      (postfix_expression
        (shape_value
          (shape_field_block
            (shape_field
              (identifier)
              (postfix_expression
                (number))))))
      (operator_symbol)
      (postfix_expression
        (identifier))))
  (binding_statement
    (named_shape_pattern
      (named_shape_pattern_field
        (identifier)
        (identifier)))
    (postfix_expression
      (identifier))))

==================
Open import overrides
==================
const open { .compose = _, .pipe = pipe2 } = import "duck:prelude/functional" ();
const open {} = import "duck:prelude/numeric" ();

---

(source_file
  (binding_statement
    (named_shape_pattern
      (named_shape_pattern_field
        (identifier)
        (wildcard))
      (named_shape_pattern_field
        (identifier)
        (identifier)))
    (application_expression
      (postfix_expression
        (import_expression
          (string)))
      (postfix_expression
        (unit_pattern))))
  (binding_statement
    (named_shape_pattern)
    (application_expression
      (postfix_expression
        (import_expression
          (string)))
      (postfix_expression
        (unit_pattern)))))

==================
Colon type algebra and newtypes
==================
type Centimeter = newtype I32
type Numeric = I32 :| I64
const readable = Point :+ { .read = value => value.x };
let distance = 42 :> Centimeter;

---

(source_file
  (type_declaration_statement
    (identifier)
    (newtype_type
      (type_reference
        (type_union
          (type_intersection
            (type_difference
              (identifier)))))))
  (type_declaration_statement
    (identifier)
    (type_reference
      (type_union
        (type_union
          (type_intersection
            (type_difference
              (identifier))))
        (type_intersection
          (type_difference
            (identifier))))))
  (binding_statement
    (identifier)
    (binary_expression
      (postfix_expression
        (identifier))
      (operator_symbol)
      (postfix_expression
        (shape_value
          (shape_field_block
            (shape_field
              (identifier)
              (arrow_function
                (parameter
                  (identifier))
                (postfix_expression
                  (field_expression
                    (postfix_expression
                      (identifier))
                    (identifier))))))))))
  (binding_statement
    (identifier)
    (binary_expression
      (postfix_expression
        (number))
      (operator_symbol)
      (postfix_expression
        (identifier)))))

==================
Ducks, extensions, intrinsics, and custom operators
==================
duck Add Self Other Output {
  .add = [Self, Other] -> Output
}

extend I32 {
  .add = [left, right] => @wasm.add_i32 [left, right]
}

infixl 60 +++ = Add.add
prefix 80 ^^ = Bool.not
let sum = 20 +++ 22;
let inverted = ^^false;

---

(source_file
  (duck_declaration_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (duck_member_block
      (duck_member
        (identifier)
        (type_reference
          (function_type
            (type_union
              (type_intersection
                (type_difference
                  (type_product
                    (positional_type_product
                      (type_reference
                        (type_union
                          (type_intersection
                            (type_difference
                              (identifier)))))
                      (type_reference
                        (type_union
                          (type_intersection
                            (type_difference
                              (identifier))))))))))
            (type_union
              (type_intersection
                (type_difference
                  (identifier)))))))))
  (extension_declaration_statement
    (identifier)
    (extension_member_block
      (shape_field
        (identifier)
        (arrow_function
          (bracket_parameter_list
            (parameter
              (identifier))
            (parameter
              (identifier)))
          (application_expression
            (postfix_expression
              (intrinsic_identifier))
            (postfix_expression
              (array_expression
                (postfix_expression
                  (identifier))
                (postfix_expression
                  (identifier)))))))))
  (fixity_declaration_statement
    (number)
    (operator_symbol)
    (fixity_target
      (qualified_identifier
        (identifier)
        (identifier))))
  (fixity_declaration_statement
    (number)
    (operator_symbol)
    (fixity_target
      (qualified_identifier
        (identifier)
        (identifier))))
  (binding_statement
    (identifier)
    (binary_expression
      (postfix_expression
        (number))
      (operator_symbol)
      (postfix_expression
        (number))))
  (binding_statement
    (identifier)
    (unary_expression
      (operator_symbol)
      (postfix_expression
        (boolean)))))

==================
Source-defined struct product namespaces
==================
let product_type = [...product_type, field.value];
let product_type = product_type :+ (field.name, value => value[index]);

---

(source_file
  (binding_statement
    (identifier)
    (postfix_expression
      (array_expression
        (array_spread
          (postfix_expression
            (identifier)))
        (postfix_expression
          (field_expression
            (postfix_expression
              (identifier))
            (identifier))))))
  (binding_statement
    (identifier)
    (binary_expression
      (postfix_expression
        (identifier))
      (operator_symbol)
      (postfix_expression
        (positional_product
          (postfix_expression
            (field_expression
              (postfix_expression
                (identifier))
              (identifier)))
          (arrow_function
            (parameter
              (identifier))
            (postfix_expression
              (index_expression
                (postfix_expression
                  (identifier))
                (postfix_expression
                  (identifier))))))))))

==================
Shape destructuring shorthand and explicit renaming
==================
const { .struct, .other = renamed } = module_value;

---

(source_file
  (binding_statement
    (named_shape_pattern
      (named_shape_pattern_field
        (identifier))
      (named_shape_pattern_field
        (identifier)
        (identifier)))
    (postfix_expression
      (identifier))))

==================
Shape value shorthand and explicit fields
==================
module () where
const code = 42;
return { .code, .status = code, .double = value => value * 2 };

---

(source_file
  (module_header
    (parameter_list))
  (binding_statement
    (identifier)
    (postfix_expression
      (number)))
  (module_return_statement
    (shape_value
      (shape_field_block
        (shorthand_field
          (identifier))
        (shape_field
          (identifier)
          (postfix_expression
            (identifier)))
        (shape_field
          (identifier)
          (arrow_function
            (parameter
              (identifier))
            (binary_expression
              (postfix_expression
                (identifier))
              (operator_symbol)
              (postfix_expression
                (number)))))))))

==================
Packed types and fixed-width integers
==================

type Flags = packed [U1, U2, U5]
type Header = packed struct { .kind = U3, .length = U13 }
let flags: Flags = Flags.pack [1u1, 2u2, 17u5];
let signed: I5 = -16i5;

---

(source_file
  (type_declaration_statement
    (identifier)
    (packed_type
      (type_product
        (positional_type_product
          (type_reference
            (type_union
              (type_intersection
                (type_difference
                  (identifier)))))
          (type_reference
            (type_union
              (type_intersection
                (type_difference
                  (identifier)))))
          (type_reference
            (type_union
              (type_intersection
                (type_difference
                  (identifier)))))))))
  (type_declaration_statement
    (identifier)
    (packed_type
      (struct_type
        (type_field_block
          (named_type_field
            (identifier)
            (type_reference
              (type_union
                (type_intersection
                  (type_difference
                    (identifier))))))
          (named_type_field
            (identifier)
            (type_reference
              (type_union
                (type_intersection
                  (type_difference
                    (identifier))))))))))
  (binding_statement
    (identifier)
    (type_reference
      (type_union
        (type_intersection
          (type_difference
            (identifier)))))
    (application_expression
      (postfix_expression
        (field_expression
          (identifier)
          (identifier)))
      (postfix_expression
        (array_expression
          (postfix_expression
            (number))
          (postfix_expression
            (number))
          (postfix_expression
            (number))))))
  (binding_statement
    (identifier)
    (type_reference
      (type_union
        (type_intersection
          (type_difference
            (identifier)))))
    (unary_expression
      (operator_symbol)
      (postfix_expression
        (number)))))

==================
Duck associated types
==================
duck Read Self {
  type Value
  .read = Self -> Value
}

---

(source_file
  (duck_declaration_statement
    (identifier)
    (identifier)
    (duck_member_block
      (duck_type_member
        (identifier))
      (duck_member
        (identifier)
        (type_reference
          (function_type
            (type_union
              (type_intersection
                (type_difference
                  (identifier))))
            (type_union
              (type_intersection
                (type_difference
                  (identifier))))))))))
