tree-sitter-duck/test/corpus/else_if.txt
==================
Else-if chains
==================

if true then
  1
else let 'x' = letter then
  2
else
  3
end;

if let #Some value = option then
  1
else let #None = option then
  2
else
  3
end;

if ready then
  work value
else other value then
  next value
else
  fallback value
end;

---

(source_file
  (expression_statement
    (if_expression
      condition: (condition_expression
        (boolean))
      consequence: (conditional_branch
        (expression_statement
          (postfix_expression
            (number))))
      (else_if_clause
        pattern: (character)
        value: (postfix_expression
          (identifier))
        consequence: (conditional_branch
          (expression_statement
            (postfix_expression
              (number)))))
      (else_clause
        alternative: (conditional_branch
          (expression_statement
            (postfix_expression
              (number)))))))
  (expression_statement
    (if_expression
      pattern: (union_pattern
        case: (constructor_identifier)
        value: (identifier))
      value: (condition_expression
        (identifier))
      consequence: (conditional_branch
        (expression_statement
          (postfix_expression
            (number))))
      (else_if_clause
        pattern: (union_pattern
          case: (constructor_identifier))
        value: (postfix_expression
          (identifier))
        consequence: (conditional_branch
          (expression_statement
            (postfix_expression
              (number)))))
      (else_clause
        alternative: (conditional_branch
          (expression_statement
            (postfix_expression
              (number)))))))
  (expression_statement
    (if_expression
      condition: (condition_expression
        (identifier))
      consequence: (conditional_branch
        (expression_statement
          (application_expression
            function: (postfix_expression
              (identifier))
            argument: (postfix_expression
              (identifier)))))
      (else_if_clause
        condition: (application_expression
          function: (postfix_expression
            (identifier))
          argument: (postfix_expression
            (identifier)))
        consequence: (conditional_branch
          (expression_statement
            (application_expression
              function: (postfix_expression
                (identifier))
              argument: (postfix_expression
                (identifier))))))
      (else_clause
        alternative: (conditional_branch
          (expression_statement
            (application_expression
              function: (postfix_expression
                (identifier))
              argument: (postfix_expression
                (identifier)))))))))
