tree-sitter-duck/test/corpus/let_else.txt
==================
Let-else binding
==================

let #Some value = result else do
  return 0;
end;
value

---

(source_file
  (binding_statement
    (union_pattern
      (constructor_identifier)
      (identifier))
    (postfix_expression
      (identifier))
    (block
      (return_statement
        (postfix_expression
          (number)))))
  (expression_statement
    (postfix_expression
      (identifier))))

==================
Return of unit
==================

let stop = () => do
  return ();
end;

---

(source_file
  (binding_statement
    (identifier)
    (arrow_function
      (parameter_list)
      (postfix_expression
        (block
          (return_statement
            (postfix_expression
              (unit_pattern))))))))
